--- a/app/src/main/res/layout/activity_formulary.xml
+++ b/app/src/main/res/layout/activity_formulary.xml
@@ -10,23 +10,13 @@
         tools:context=".FormularyActivity">
 
     <ImageView
-            android:layout_width="142dp"
-            android:layout_height="139dp" app:srcCompat="@drawable/ic_account_circle_200dp"
+            android:layout_width="178dp"
+            android:layout_height="165dp" app:srcCompat="@drawable/ic_account_circle_200dp"
             android:id="@+id/img_photoform"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="2dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tv_author" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.329"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:hint="@string/hint_emailform"
-            android:id="@+id/txt_emailform" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_phoneform"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -37,7 +27,8 @@
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginBottom="184dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginBottom="196dp" app:layout_constraintBottom_toBottomOf="parent"
+    />
     <Button
             android:text="@string/btnsubmit"
             android:layout_width="wrap_content"
@@ -70,10 +61,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/tv_author" android:layout_marginTop="80dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="88dp"
+            android:layout_marginEnd="80dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/text_form"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintVertical_bias="0.098"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -82,9 +73,9 @@
             android:id="@+id/text_form"
             android:hint="@string/hint_form" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_emailform"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/img_photoform"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.205"/>
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/txt_phoneform" app:layout_constraintVertical_bias="0.689"/>
 
 
 </android.support.constraint.ConstraintLayout>
