--- a/app/src/main/res/layout/demand_node.xml
+++ b/app/src/main/res/layout/demand_node.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+<android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:id="@+id/demand_card"
+        android:layout_height="wrap_content">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="180dp" app:srcCompat="@drawable/ic_about"
+                tools:layout_editor_absoluteY="102dp"
+                tools:layout_editor_absoluteX="43dp" android:id="@+id/imgv_Demand"/>
+
+        <TextView
+                android:text="@string/tv_NClient"
+                android:layout_width="match_parent"
+                android:textSize="18sp"
+                android:textColor="#ffffff"
+                android:gravity="center"
+                android:background="@drawable/buttonshapecollor"
+                android:layout_height="wrap_content" android:id="@+id/tv_userClient"/>
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
